SourceMetaData/src/objects/PersonAddressLookup__c.object
<CustomObject>
    <description>A lookup relationship between Person Accounts (&amp; Contacts) to the custom address object</description>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Associated Address</description>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>PersonAddressLookup</relationshipLabel>
        <relationshipName>PersonAddressLookup</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Correspondence_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this the Primary address for the person?</description>
        <inlineHelpText>Is this the Primary address for the person?</inlineHelpText>
        <label>Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Address_Line_1__c</fullName>
        <formula>Address__r.Full_Address_Line_1__c</formula>
        <label>Full Address Line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address_Line_2__c</fullName>
        <formula>Address__r.Full_Address_Line_2__c</formula>
        <label>Full Address Line 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address_Line_3__c</fullName>
        <formula>Address__r.Full_Address_Line_3__c</formula>
        <label>Full Address Line 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Additional notes.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Person__c</fullName>
        <description>The related person account that this Person Address lookup field refers to.</description>
        <inlineHelpText>The related person account that this Person Address lookup field refers to.</inlineHelpText>
        <label>Person</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Associated Addresses</relationshipLabel>
        <relationshipName>PersonAddressLookup</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Person&apos;s relationship to the address.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Visitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Location</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Person Address Lookup</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Person Address Lookups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>End_Date_must_be_after_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The start date must be before the end date.</errorMessage>
    </validationRules>
</CustomObject>